k8s/50-hotel-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-service-db
spec:
  selector:
    matchLabels:
      app: hotel-service-db
  template:
    metadata:
      labels:
        app: hotel-service-db
    spec:
      containers:
        - name: hotel-service-db
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: hotel-service-db-volume
      volumes:
        - name: hotel-service-db-volume
          hostPath:
            path: /hotel-service-db-volume
            type: DirectoryOrCreate
