k8s/60-booking-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
spec:
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
      #annotations:
       # prometheus.io/scrape: "true"
        #prometheus.io/port: "8080"
        #prometheus.io/path: "/actuator/metrics"
    spec:
      containers:
        - name: booking-service
          image: booking-service:v1
          ports:
            - containerPort: 8080
              name: hello-port
              protocol: TCP
