k8s/60-booking-orchestrator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-orchestrator
spec:
  selector:
    matchLabels:
      app: booking-orchestrator
  template:
    metadata:
      labels:
        app: booking-orchestrator
    spec:
      containers:
        - name: booking-orchestrator
          image: booking-orchestrator:v1
          ports:
            - containerPort: 8080
              name: "orch"
              protocol: TCP
