k8s/60-hotel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-service
spec:
  selector:
    matchLabels:
      app: hotel-service
  template:
    metadata:
      labels:
        app: hotel-service
    spec:
      containers:
        - name: hotel-service
          image: hotel-service:v1
          ports:
            - containerPort: 8080
