k8s/30-booking-orchestrator.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-orchestrator
spec:
  ports:
  - port: 8080
  selector:
    app: booking-orchestrator
---
apiVersion: v1
kind: Service
metadata:
  name: booking-orchestrator
  labels:
    app: booking-orchestrator
spec:
  selector:
    app: booking-orchestrator
  ports:
    - protocol: TCP
      name: http-traffic-orchestrator
      port: 8080
      targetPort: "orch"
  type: ClusterIP
