k8s/30-booking-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: booking-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  ports:
  - port: 8080
  selector:
    app: booking-service
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      name: http-traffic
      port: 8080
      targetPort: 8080
