k8s/30-hotel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hotel-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: hotel-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-service
spec:
  ports:
  - port: 8080
  selector:
    app: hotel-service
