k8s/30-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-db
spec:
  ports:
    - port: 27017
  selector:
    app: user-service-db
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    name: http
  selector:
    app: user-service
