k8s/60-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  selector:
    app: booking-service
  ports:
    - port: 8080
      name: hello-svc-port
