k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS, DELETE"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: default
spec:
  rules:
  - host: fghotel.dsbd.loc
    http:
      paths:
      - path: /users(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service
            port:
              number: 8080
      - path: /booking(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 8080
      - path: /hotel(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: hotel-service
            port:
              number: 8080
